--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <img src="assets/img/WhatsApp Image 2024-05-30 at 00.11.10_2142f652.jpg" class="imageAboutPage" alt="">
                 </div>
                 <div class="col-lg-8">
-                    <p>"My name is Koushik, and I am a third-year Computer Science and Engineering student at Adichunchanagiri Institute of Technology in Chikkamagaluru."</p>
+                    <p>"My name is Koushik, and I am a Fourth-year Computer Science and Engineering student at Adichunchanagiri Institute of Technology in Chikkamagaluru."</p>
                     <div class="row mt-3">
                         <div class="col-md-6">
                             <ul>
